# AI-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: backend.py  main.py
app/api/: main.py
app/helper/: authentication.py  classifer.py  history_store.py  pdf_processor.py  rag_engine.py  rate_limiter.py  s3_loader.py
data/extracted/: academic-integrity.txt  handbook.txt
doc/: tutorial.ipynb
tests/: test_history_store.py  test_rag_collection_naming.py  test_rag_search.py
